Fix layout issues on homepage
Fix styling issues on homepage

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,17 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
-  color: #272a31;
+}
+
+html,
+body {
+  overflow-x: hidden;
+}
+
+.section-title {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 32px;
 }
 
 /* Logo */
@@ -16,28 +26,40 @@
 }
 
 /* Colors */
-.orange-text {
-  color: #ec5242;
-}
-
-.bg-orange {
-  background-color: #ec5242;
-}
-
-.black-text {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+button {
   color: #272a31;
 }
 
+.orange-text {
+  color: #ec5242 !important;
+}
+
+.bg-orange {
+  background-color: #ec5242 !important;
+}
+
+.black-text {
+  color: #272a31 !important;
+}
+
 .bg-black {
-  background-color: #272a31;
+  background-color: #272a31 !important;
 }
 
 .deem-orange-text {
-  color: #d3d3d3;
+  color: #d3d3d3 !important;
 }
 
 .bg-deem-orange {
-  background-color: #d3d3d3;
+  background-color: #d3d3d3 !important;
 }
 
 /* Fonts */
@@ -53,8 +75,8 @@ h1,
 .main-title {
   font-family: 'font-family: ''Cocogoose', sans-serif;
   font-weight: 700;
-  font-size: 40px;
-  margin-bottom: 16px;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 /* Header */
@@ -63,8 +85,13 @@ h1,
   height: 80vh;
 }
 
+.about .jumbotron {
+  min-height: 80vh !important;
+  height: unset;
+}
+
 .page-title {
-  font-size: 70px;
+  font-size: 56px;
 }
 
 .devcamp-featured-image {
@@ -77,9 +104,14 @@ h1,
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   padding: 5vh 0;
 }
 
+.program-image {
+  width: 100%;
+  height: auto;
+}
 
 .program-container .icon {
   flex-basis: 20%;
@@ -87,6 +119,11 @@ h1,
 
 .program-container .title {
   flex-basis: 30%;
+}
+
+.program-container .title .card-title {
+  font-weight: 600;
+  color: #e95242 !important;
 }
 
 .program-container .description {
@@ -97,13 +134,109 @@ h1,
   background-color: #45454596;
 }
 
+/* Speakers */
+.spearkers-wrapper .speaker-img::before {
+  content: "";
+  width: 5rem;
+  height: 5rem;
+  background: #ec5242;
+  margin-left: -1.125rem;
+  position: absolute;
+  margin-top: -1.125rem;
+  z-index: -1;
+}
+
+.speaker-item {
+  margin-left: 1.25rem;
+  padding-top: 1.875rem;
+}
+
+.spearkers-wrapper .speaker-img>img {
+  box-shadow: 0 0 .3125rem #717171;
+  border: .1875rem solid white;
+  width: 9.375rem;
+}
+
+/* Partners */
+.partners-section {
+  background: #272a31;
+}
+
+/* Other */
+.about .call-to-action {
+  font-size: 106px;
+  font-weight: 900;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: url(https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  background-size: contain;
+  text-align: center;
+}
+
+.about .cta {
+  width: 70%;
+}
+
+.prev-event-1 {
+  background-image: url('../images/coding-bootcamp-amsterdam.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 300px;
+  padding: 20px;
+}
+
+.prev-event-1 .card-body {
+  z-index: 1;
+}
+
+.prev-event-1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(148 37 25 / 81%);
+
+}
+
+.prev-event-2 {
+  background-image: url('../images/coding-bootcamp2.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 300px;
+  padding: 20px;
+}
+
+.prev-event-2 .card-body {
+  z-index: 1;
+}
+
+.prev-event-2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(148 37 25 / 81%);
+
+}
+
 /* Media Queries */
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 768px) {
 
   /* Header */
   h1,
   .main-title {
-    font-size: 32px;
+    font-size: 2rem;
+  }
+
+  .page-title {
+    font-size: 70px;
   }
 
   .devcamp-featured-image {
@@ -112,5 +245,33 @@ h1,
     top: 17%;
     right: 10%;
     width: 35%;
+  }
+
+  .program-image {
+    width: 40%;
+    height: auto;
+  }
+
+  .program-container .title .card-title {
+    font-weight: 600;
+    color: #e95242 !important;
+  }
+
+  .speaker-item {
+    margin-left: 0;
+  }
+
+  .about .call-to-action {
+    font-size: 150px;
+    font-weight: 900;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-image: url('https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    background-size: contain;
+  }
+
+  .about .cta {
+    width: 40%;
   }
 }
